# aarch64-uefi

./: Cargo.toml  Makefile  README.md
uefi/: Cargo.toml
uefi/src/: interrupts.rs  main.rs  memory.rs
